# household-back

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 26f899238442_add_categories_kind_check.py  75dc7468aa90_market_and_currency_drop_exchange_rates.py  a9668f7687a9_drop_fixed_expenses_amount.py  b5375d2ae3a6_transaction_fixed_expense_id_replaces_.py  be504a39cec0_initial_baseline.py  c5f3a1b8e2d4_account_snapshots_monthly_columns.py  d7e2f8a1b3c4_widen_tx_type_to_20.py  e4a8b2c1f5d6_portfolio_country_rename.py
app/: main.py
app/core/: api_response.py  config.py  database.py  jobs.py  logging.py  model.py  scheduler.py  types.py
app/core/auth/: deps.py  enum.py  jwt.py  security.py
app/core/enums/: data_status.py
app/core/exceptions/: __init__.py  custom_exception.py  error_code.py  handlers.py
app/core/middleware/: __init__.py  access_log.py
app/domain/account/: enum.py  model.py  repository.py  router.py  schema.py  service.py
app/domain/account_snapshot/: model.py  repository.py  router.py  schema.py  service.py
app/domain/auth/: model.py  repository.py  router.py  schema.py  service.py
app/domain/category/: enum.py  model.py  repository.py  router.py  schema.py  service.py
app/domain/enum/: router.py  service.py
app/domain/exchange_rate/: model.py  repository.py  service.py
ddl/: init.sql
docs/: api-list.md
infra/backup/: README.md  backup-db.sh  install.sh  rclone.conf.template
(+37 files in other folders)
